[tool.poetry]
name = "pytheriak"
version = "1.1.1"
description = "Python wrapper functions for Theriak-Domino."
authors = ["Philip Hartmeier <philip.hartmeier@hotmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{ include = "pytheriak", from = "src" },]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23"
h5py = "^3.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
