[project]
name = "pytheriak"
version = "1.2.0"
description = "Python wrapper functions for Theriak-Domino."
authors = [{ name = "Philip Hartmeier", email = "philip.hartmeier@unil.ch" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.23",
    "h5py>=3.10.0",
]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/Theriak-Domino/pytheriak"

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pytheriak"]